update handlebar and route

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,11 +2,11 @@
 {{#each posts as |post| }}
 <div class="post">
     <div class="card">
-        <h3>Why MVC is so important</h3>
-        <h4>Post by Xandromous on 5/8/2020</h4>
+        <h3>{{post.title}}</h3>
+        <h4>Post by {{user.name}} on {{format_date post.date_created}}</h4>
     </div>
     <section class="section">
-        MVC allows developers to maintain a true separation of concerns, devising their code between the Model layer for data, the View layer for design, and the Controller layer for application logic.
+        {{post.content}}
     </section>            
 </div>
 {{/each}}
