--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"> -->
+    {{!-- <link rel="stylesheet" href="css/bootstrap.min.css"> --}}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>The Tech Blog</title>
@@ -15,9 +14,9 @@
     <div class="top-container">
         <nav>
             <a href="/" class="navigation">Home</a>
-            <a href="/profile" class="navigation">Dashboard</a>
+            <a href="/dashboard" class="navigation">Dashboard</a>
             {{#if logged_in}}
-            <a href="/profile" class="navigation">Logout</a>
+            <a href="/" class="navigation">Logout [{{username}}]</a>
             {{else}}
             <a href="/login" class="navigation">Login</a>
             {{/if}}
@@ -38,5 +37,6 @@
     <script scr="/js/logout.js"></script>
     {{/if}}
     <!-- <script language="javascript" src="js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
