--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,32 +8,36 @@
     {{!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"> --}}
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>The Tech Blog</title>
+    <title>appMonster</title>
 </head>
 <body>
     <div class="top-container">
+        <header class="header">
+            {{#if logged_in}}
+            <h1 class="app-title">Welcome, {{username}}!</h1>
+            {{else}}
+            <h1 class="app-title">appMonster</h1>
+            {{/if}}
+        </header>
+
         <nav class="navigation-container">
             <a href="/" class="navigation">Home</a>
-            <a href="/dashboard" class="navigation">Dashboard</a>
             {{#if logged_in}}
+            <a href="/dashboard" class="navigation">User</a>
             <a href="/" class="navigation" id="logout">Logout [{{username}}]</a>
             {{else}}
             <a href="/login" class="navigation">Login</a>
             {{/if}}
         </nav>
-
-        <header class="header">
-            {{#if logged_in}}
-            <h1 class="app-title">Welcome, {{username}}!</h1>
-            {{else}}
-            <h1 class="app-title">The Tech Blog</h1>
-            {{/if}}
-        </header>
     </div>
 
     <main>
         {{{ body }}}
     </main>    
+
+    <div class="footer">
+        {{> footer }}
+    </div>
 
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
