--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,77 @@
-<!-- Loop over each object in the posts array -->
-<article class="post">
+<div>
+    <h2 class="position-absolute top-50 start-50 translate-middle text-center text-success"> We are a non-profit organization that help people track their task at night, while we attack and defend the multiverse during the day... or is that backwards? Anyways I hope you enjoy!</h2>
+    {{!-- <section class="homepage-section">
+        <div class="wrapper">
+            <div class="static-txt">AppMonster</div>
+            <ul class="dynamic-txts">
+                <li><span>is a non-profit organization</span></li>
+                <li><span>helps people track their tasks</span></li>
+                <li><span>attacks and defends the multiverse</span></li>
+                <li><span>hopes you enjoy</span></li>
+            </ul>
+        </div>        
+    </section> --}}
+    <a href="/login"><button class="position-absolute bottom-50 end-50" id="button" aria-describedby="tooltip">Get Started</button></a>
+    <div id="tooltip" role="tooltip">You'll need to login or sign up first!<div id="arrow" data-popper-arrow></div></div>
+    
+</div>
 
-  {{#each posts as |post| }}
-  {{> post-info post}}
-  {{/each}}
+<script src="/js/script.js"></script>
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<script>
+    const button = document.querySelector('#button');
+    const tooltip = document.querySelector('#tooltip');
 
-</article>
+    const popperInstance = Popper.createPopper(button, tooltip, {
+        modifiers: [
+            {
+                name: 'offset',
+                options: {
+                    offset: [0, 8],
+                },
+            },
+        ],
+    });
 
+    function show() {
+        // Make the tooltip visible
+        tooltip.setAttribute('data-show', '');
+
+        // Enable the event listeners
+        popperInstance.setOptions((options) => ({
+            ...options,
+            modifiers: [
+                ...options.modifiers,
+                { name: 'eventListeners', enabled: true },
+            ],
+        }));
+
+        // Update its position
+        popperInstance.update();
+}
+
+    function hide() {
+        // Hide the tooltip
+        tooltip.removeAttribute('data-show');
+
+        // Disable the event listeners
+        popperInstance.setOptions((options) => ({
+            ...options,
+            modifiers: [
+                ...options.modifiers,
+                { name: 'eventListeners', enabled: false },
+            ],
+        }));
+    }
+
+    const showEvents = ['mouseenter', 'focus'];
+    const hideEvents = ['mouseleave', 'blur'];
+
+    showEvents.forEach((event) => {
+        button.addEventListener(event, show);
+    });
+
+    hideEvents.forEach((event) => {
+        button.addEventListener(event, hide);
+    });
+</script>
